[tool.poetry]
name = "py-prefix-hash-example"
version = "0.1.0"
description = ""
authors = ["Sebastian Nyberg <seb.nyberg90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
murmurhash3 = "^2.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
